tests/errors/generic_null_to_nonnull_list_element.dang
# Null flowing through a generic function cannot satisfy a non-null list element
id(x: a): a { x }

result: [Int!]! = [id(null)]
